--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,15 @@ set( CMAKE_MODULE_PATH
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/cmake )
 
+if("${CMAKE_SYSTEM_NAME}" MATCHES "CYGWIN")
+    message("building for CYGWIN platform")
+    set(CMAKE_CXX_STANDARD 14)
+    set(CMAKE_CXX_STANDARD_REQUIRED ON)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE")
+else()
+    message("building for unix platforms")
+endif()
+
 include( XRootDUtils )
 CheckBuildDirectory()
 
