--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -28,7 +28,10 @@ add_custom_command(OUTPUT ${OUTPUT}
                    COMMAND ${PYTHON_EXECUTABLE} ${SETUP_PY} build
                    DEPENDS ${DEPS})
 
+message("Here I am in bindings/python building the custom target with XRD_SRCINCDIR=${XRD_SRCINCDIR}")
 add_custom_target(python_target ALL DEPENDS ${OUTPUT} XrdCl)
+file(READ ${OUTPUT} PYTHON_BINDINGS)
+message("I find that PYTHON_BINDINGS=${PYTHON_BINDINGS}")
 
 # Get the distribution name on Debian families
 execute_process( COMMAND grep -i ^NAME=\" /etc/os-release
