--- a/bindings/python/setup.py.in
+++ b/bindings/python/setup.py.in
@@ -45,6 +45,8 @@ xrdsrcincdir = "${XRD_SRCINCDIR}"
 xrdbinincdir = "${XRD_BININCDIR}"
 version      = "${XROOTD_VERSION}"
 
+usrincludedir = "${USR_INCLUDEDIR}"
+
 if version.startswith('unknown'):
   try:
     import os
@@ -61,6 +63,7 @@ if version.startswith('unknown'):
 print('XRootD library dir:    ', xrdlibdir)
 print('XRootD src include dir:', xrdsrcincdir)
 print('XRootD bin include dir:', xrdbinincdir)
+print('system include dir:', usrincludedir)
 print('Version:               ', version)
 
 setup( name             = 'xrootd',
@@ -82,7 +85,7 @@ setup( name             = 'xrootd',
                depends   = depends,
                libraries = ['XrdCl', 'XrdUtils', 'dl'],
                extra_compile_args = ['-g'],
-               include_dirs = [xrdsrcincdir, xrdbinincdir],
+               include_dirs = [xrdsrcincdir, xrdbinincdir, usrincludedir],
                library_dirs = [xrdlibdir, xrdcllibdir]
                )
            ]
