* augment the cmake files to build both static and shared libs [rtj]

--- a/src/XrdCl/CMakeLists.txt
+++ b/src/XrdCl/CMakeLists.txt
@@ -106,6 +106,72 @@ add_library(
   ${XrdEcSources}
 )
 
+add_library(
+  XrdCl_static
+  STATIC
+  XrdClLog.cc                    XrdClLog.hh
+  XrdClUtils.cc                  XrdClUtils.hh
+                                 XrdClOptimizers.hh
+                                 XrdClConstants.hh
+  XrdClEnv.cc                    XrdClEnv.hh
+  XrdClDefaultEnv.cc             XrdClDefaultEnv.hh
+  XrdClURL.cc                    XrdClURL.hh
+  XrdClStatus.cc                 XrdClStatus.hh
+  XrdClSocket.cc                 XrdClSocket.hh
+  XrdClTls.cc                    XrdClTls.hh
+                                 XrdClPoller.hh
+  XrdClPollerFactory.cc          XrdClPollerFactory.hh
+  XrdClPollerBuiltIn.cc          XrdClPollerBuiltIn.hh
+  XrdClPostMaster.cc             XrdClPostMaster.hh
+                                 XrdClPostMasterInterfaces.hh
+  XrdClChannel.cc                XrdClChannel.hh
+  XrdClStream.cc                 XrdClStream.hh
+  XrdClXRootDTransport.cc        XrdClXRootDTransport.hh
+  XrdClInQueue.cc                XrdClInQueue.hh
+  XrdClOutQueue.cc               XrdClOutQueue.hh
+  XrdClTaskManager.cc            XrdClTaskManager.hh
+  XrdClSIDManager.cc             XrdClSIDManager.hh
+  XrdClFileSystem.cc             XrdClFileSystem.hh
+  XrdClXRootDMsgHandler.cc       XrdClXRootDMsgHandler.hh
+                                 XrdClBuffer.hh
+                                 XrdClMessage.hh
+  XrdClMessageUtils.cc           XrdClMessageUtils.hh
+  XrdClXRootDResponses.cc        XrdClXRootDResponses.hh
+                                 XrdClRequestSync.hh
+  XrdClFile.cc                   XrdClFile.hh
+  XrdClFileStateHandler.cc       XrdClFileStateHandler.hh
+  XrdClCopyProcess.cc            XrdClCopyProcess.hh
+  XrdClClassicCopyJob.cc         XrdClClassicCopyJob.hh
+  XrdClThirdPartyCopyJob.cc      XrdClThirdPartyCopyJob.hh
+  XrdClAsyncSocketHandler.cc     XrdClAsyncSocketHandler.hh
+  XrdClChannelHandlerList.cc     XrdClChannelHandlerList.hh
+  XrdClForkHandler.cc            XrdClForkHandler.hh
+  XrdClCheckSumManager.cc        XrdClCheckSumManager.hh
+  XrdClTransportManager.cc       XrdClTransportManager.hh
+                                 XrdClSyncQueue.hh
+  XrdClJobManager.cc             XrdClJobManager.hh
+                                 XrdClResponseJob.hh
+  XrdClFileTimer.cc              XrdClFileTimer.hh
+                                 XrdClPlugInInterface.hh
+  XrdClPlugInManager.cc          XrdClPlugInManager.hh
+                                 XrdClPropertyList.hh
+                                 XrdClCopyJob.hh
+  XrdClFileSystemUtils.cc        XrdClFileSystemUtils.hh
+  XrdClTPFallBackCopyJob.cc      XrdClTPFallBackCopyJob.hh
+  XrdClMetalinkRedirector.cc     XrdClMetalinkRedirector.hh
+  XrdClRedirectorRegistry.cc     XrdClRedirectorRegistry.hh
+  XrdClXCpCtx.cc                 XrdClXCpCtx.hh
+  XrdClXCpSrc.cc                 XrdClXCpSrc.hh
+  XrdClLocalFileHandler.cc       XrdClLocalFileHandler.hh
+  XrdClLocalFileTask.cc          XrdClLocalFileTask.hh
+  XrdClZipListHandler.cc         XrdClZipListHandler.hh
+  XrdClZipArchive.cc             XrdClZipArchive.hh
+  
+  ${XrdClPipelineSources}
+
+  ${XrdEcSources}
+)
+
 target_link_libraries(
   XrdCl
   PRIVATE
@@ -170,7 +236,7 @@ endif()
 # Install
 #-------------------------------------------------------------------------------
 install(
-  TARGETS XrdCl
+  TARGETS XrdCl XrdCl_static
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 
